# Projet_FilRouge_Python

./: main.py  pyproject.toml
model/: Skill.py  Student.py  Teacher.py  User.py
src/: main.py
src/model/: Cohort.py  Skill.py  Student.py  Teacher.py  Users.py  Validation.py
